WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307485
GetPushSubscription should throw AbortError on webpushd connection error
https://bugs.webkit.org/show_bug.cgi?id=307485
Summary
GetPushSubscription should throw AbortError on webpushd connection error
Ben Nham
Reported
2026-02-10 16:04:27 PST
GetPushSubscription throws an IndexSizeError if there's a connection error to webpushd. It should either return null or throw an AbortError to match the behavior or Subscribe.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-10 16:04:35 PST
<
rdar://problem/170097738
>
Ben Nham
Comment 2
2026-02-10 16:05:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58345
EWS
Comment 3
2026-02-11 14:03:31 PST
Committed
307304@main
(324154a54293): <
https://commits.webkit.org/307304@main
> Reviewed commits have been landed. Closing PR #58345 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug