GetPushSubscription should throw AbortError on webpushd connection error https://bugs.webkit.org/show_bug.cgi?id=307485 rdar://170097738

Reviewed by Brady Eidson.

GetPushSubscription throws an IndexSizeError if there's a connection error to webpushd. Make it
throw an AbortError instead to match the behavior of subscribe.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm
* Source/WebKit/NetworkProcess/Notifications/WebPushDaemonConnection.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:
(TestWebKitAPI::(WebPushDTest, GetPushSubscriptionWithBadIPCVersionRaisesExceptionTest)):

Canonical link: https://commits.webkit.org/307304@main